change copyright notice, update dev notes

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,5 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=BDE94296404D5F281CE65690536C8827
+CopyrightNotice=Copyright 2024 Richard Skala
+
