Change log category verbosity for player ship pawn. added to defaultengine.ini

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -93,3 +93,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[Core.Log]
+LogPlayerShipPawn=Warning
+LogPlayerShipPawnInput=Warning
