--- a/SpaceShooter02.uproject
+++ b/SpaceShooter02.uproject
@@ -10,7 +10,8 @@
 			"LoadingPhase": "Default",
 			"AdditionalDependencies": [
 				"Engine",
-				"Blutility"
+				"Blutility",
+				"CoreUObject"
 			]
 		}
 	],
