--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,4 +2,5 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=BDE94296404D5F281CE65690536C8827
 CopyrightNotice=Copyright 2024 Richard Skala
+ProjectName=SpaceShooter
 
