Added Editor module

--- a/SpaceShooter02.uproject
+++ b/SpaceShooter02.uproject
@@ -13,6 +13,14 @@
 				"Blutility",
 				"CoreUObject"
 			]
+		},
+		{
+			"Name": "SpaceShooter02Editor",
+			"Type": "Editor",
+			"LoadingPhase": "PostEngineInit",
+			"AdditionalDependencies": [
+				"Blutility"
+			]
 		}
 	],
 	"Plugins": [
