--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/GameMap01.GameMap01
 EditorStartupMap=/Game/Maps/GameMap01.GameMap01
 GlobalDefaultGameMode=/Game/Blueprints/BP_SpaceShooterGameMode.BP_SpaceShooterGameMode_C
+GameInstanceClass=/Script/SpaceShooter02.SpaceShooterGameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
