--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,7 +74,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 HardwareCursors=()
-SoftwareCursors=((Default, "/Game/Blueprints/WBP_MouseCursor.WBP_MouseCursor_C"))
+SoftwareCursors=((Default, "/Game/Blueprints/UI/WBP_MouseCursor_Outlined.WBP_MouseCursor_Outlined_C"))
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
