Update game title

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,4 +3,6 @@
 ProjectID=BDE94296404D5F281CE65690536C8827
 CopyrightNotice=Copyright 2024 Richard Skala
 ProjectName=SpaceShooter
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "5725B9794C23E0E6C80F85B0399102B0", "Generic Space Shooter")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "2D933A2D4D90CC6CDD4E73A6136ABAD4", "Generic Space Shooter")
 
